@@ -131,6 +131,16 @@ debug = false
 command_delay = 0.0
 status_delay = 1.0
 
+[server_seedlink_iris]
+type = seedlink
+server = rtserve.iris.washington.edu
+port = 18000
+timeout = 30
+debug = false
+# seedlink does not serve station metadata, so a different server defined in
+# the config file has to be specified for fetching station metadata here:
+metadata_server = server_fdsn_iris
+
 [server_seishub]
 # not used in the examples, local network server only
 type = seishub
